--- a/cooker/pubspec.yaml
+++ b/cooker/pubspec.yaml
@@ -17,7 +17,9 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  protobuf: ^1.0.1
+  firebase_auth: 0.15.4
+  firebase_storage: ^3.1.1
+  cloud_firestore:
   flutter:
     sdk: flutter
 
