--- a/cooker/pubspec.yaml
+++ b/cooker/pubspec.yaml
@@ -17,6 +17,10 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  http: ^0.12.0+4
+  uuid: 2.0.4
+  image_cropper: ^1.2.1
+  image_picker: ^0.6.3+4
   firebase_auth: 0.15.4
   firebase_storage: ^3.1.1
   cloud_firestore:
@@ -38,6 +42,8 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
+  assets:
+    - assets/images/logo.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
